# backend

./: .env.example  .flaskenv  .gitignore  ADMIN_FRONTEND_GUIDE.md  ENV_VARS.md  FIX_REPORT.md  FRONTEND_GUIDE.md  README.md  USER_NOTIFICATION.md  bash.exe.stackdump  config.py  main.py  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  run.py
app/: __init__.py  blueprints.py  context_processors.py  logging.py  seed.py
app/core/: __init__.py
app/core/api/: __init__.py
app/core/web/: __init__.py
app/enums/: auth.py  orders.py  payments.py  products.py  waitlist.py
app/error_handlers/api/: __init__.py  clerk.py  db.py  email.py  http.py  jwt.py  pydantic.py  unexpected.py
app/error_handlers/web/: __init__.py  db.py  http.py  unexpected.py
app/extensions/: __init__.py  docs.py  login.py
app/middleware/: __init__.py  after_request.py  before_request.py
app/models/: __init__.py  audit.py  base.py  cart.py  category.py  cms.py  crm.py  loyalty.py  media.py  order.py  payment.py  product.py  revamp.py  role.py  settings.py  subscription.py  user.py  waitlist.py  wallet.py  wishlist.py
app/schemas/: __init__.py  addresses.py  admin.py  auth.py  b2b.py  cart.py  categories.py  checkout.py  crm.py  loyalty.py  materials.py  orders.py  payments.py  products.py  profile.py  response.py  response_data.py  revamp.py  user_management.py  waitlist.py  wishlist.py
app/utils/: __init__.py  countries.py
app/utils/app_settings/: utils.py
app/utils/auth/: __init__.py  clerk.py
app/utils/checkout/: __init__.py  service.py
app/utils/emailing/: pwd.py  (+2 more)
(+221 files in other folders)
