[project]
name = "kezura"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cachetools>=6.2.2",
    "clerk-backend-api>=4.1.3",
    "cloudinary>=1.44.1",
    "email-validator>=2.3.0",
    "flask>=3.1.2",
    "flask-caching>=2.3.1",
    "flask-cors>=6.0.1",
    "flask-jwt-extended>=4.7.1",
    "flask-limiter>=4.1.0",
    "flask-mail>=0.10.0",
    "flask-migrate>=4.1.0",
    "flask-pydantic-spec>=0.8.7",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "phonenumbers>=9.0.20",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "python-slugify>=8.0.4",
    "pyjwt>=2.8.0",
    "quas-docs>=0.0.2",
    "requests>=2.32.5",
    "rich>=13.0.0",
    "typing-extensions>=4.15.0",
    "quas-utils>=0.0.6",
    "flask-wtf>=1.2.2",
    "pycountry>=24.6.1",
]
